<resources>
    <!--<string name="app_name">Oasis Sdk Demo</string>-->

    <string name="btn_login">Login</string>
    <string name="btn_suggest_custom_service">反馈/客服</string>

    <string name="app_code">nk35e</string>
    <string name="share">Share</string>
    <string name="title_receive">Receive</string>
    <string name="title_send">Send</string>
    <string name="msg_no_deep_link">No deep link received.</string>

    <string name="link_label">Link:</string>
    <string name="none">None</string>

    <string name="action_deep_link">
com.google.android.gms.samples.appinvite.DEEP_LINK_ACTION
</string>
    <string name="invite">Send invitations!</string>
    <string name="welcome">Invites</string>
    <string name="referrer_hint">Deep link not provided</string>
    <string name="deep_link_default">Deep link not set</string>
    <string name="invitation_id_default">Invitation ID not set</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="invitation_title">Send App Invite Quickstart Invitation</string>
<string name="invitation_message">
This app is terrific, give it a try and get $5 off!
</string>
    <string name="invitation_deep_link">http://www.baidu.com/offer/</string>
<string name="invitation_custom_image">
https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png
</string>
    <string name="invitation_cta">Install!</string>
    <string name="deep_link_fmt" formatted="false">Deep Link: %s</string>
    <string name="invitation_id_fmt" formatted="false">Invitation ID: %s</string>
    <string name="sent_invitations_fmt" formatted="false">Sent %d invitations</string>
    <string name="send_failed">Sending invitations failed</string>
    <string name="invite_dialog_title">You got an invitation!</string>
    <string name="google_play_services_error">Google Play Services Error</string>
</resources>
